<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/plantilla_sin_letras"
    tools:context="com.a0ohm.ledpool.contoler.RegisterActivity">
    <include layout="@layout/go_home" ></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white">
            <EditText
                android:id="@+id/Rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rut"/>
            <EditText
                android:id="@+id/nombreusuario"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
            <EditText
                android:id="@+id/emailre"
                android:inputType="textEmailAddress"

                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"/>
            <EditText
                android:inputType="phone"
                android:id="@+id/Telefono"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"/>
            <EditText
                android:id="@+id/pass"
                android:inputType="textPassword"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"/>
            <EditText
                android:inputType="number"
                android:id="@+id/nfocos"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/nfocos"/>
            <EditText
                android:id="@+id/serial"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/serial"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                app:srcCompat="@drawable/verde" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/morado" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                app:srcCompat="@drawable/boton_azul" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registrate"
            android:theme="@style/RaisedButtonDark"
            android:onClick="Register"/>

    </LinearLayout>









</LinearLayout>
