<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plantilla_sin_letras"
    tools:context="com.a0ohm.ledpool.contoler.edit">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <EditText
                    android:id="@+id/RutEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rut"/>
                <EditText
                    android:id="@+id/nombreusuarioEdit"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>
                <EditText
                    android:id="@+id/emailreEdit"
                    android:inputType="textEmailAddress"

                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"/>
                <EditText
                    android:inputType="phone"
                    android:id="@+id/TelefonoEdit"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"/>
                <EditText
                    android:id="@+id/passEdit"
                    android:inputType="textPassword"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"/>
                <EditText
                    android:inputType="number"
                    android:id="@+id/nfocosEdit"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nfocos"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    app:srcCompat="@drawable/verde" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/morado" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    app:srcCompat="@drawable/boton_azul" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/editbutton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="Editar"
                android:theme="@style/RaisedButtonDark"
                />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
