<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plantilla_con_letras"
    tools:context="com.a0ohm.ledpool.HomeActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toStartOf="@+id/ampolleta"
            android:text="Led"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/ampolleta"
            android:layout_width="95dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ampolletaonsincapa" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ampolleta"
            android:text="On"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ampolleta"
            android:layout_marginStart="20dp"
            android:onClick="goCreateAccount"
            android:text="@string/registrate"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ampolleta"
            android:layout_toEndOf="@+id/ampolleta"
            android:onClick="goLogin"
            android:text="@string/login"
            android:theme="@style/RaisedButtonDark" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="41dp"
            android:layout_toEndOf="@+id/button3"
            android:onClick="goGuest"
            android:text="@string/invitados"
            android:theme="@style/RaisedButtonDark" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
